[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/Skybox.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/NetworkSetup.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.482353, 0.482353, 0.482353, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 60, 2, 60 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.5, 1.5, 0.2 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 3, 3, 0.4 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 3 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, 8.74228e-08, 3.55271e-15, 7.26071e-08, 0.830528, 0.556977, 4.86925e-08, 0.556977, -0.830528, 0, 22.7169, 0 )
shadow_enabled = true

[node name="Wall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -6 )

[node name="CollisionShape" type="CollisionShape" parent="Wall"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Wall"]
mesh = SubResource( 5 )
material/0 = null

[node name="Skybox" parent="." instance=ExtResource( 2 )]

[node name="NetworkSetup" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 3 )

[node name="PlayerSetup" type="VBoxContainer" parent="NetworkSetup"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -33.0
margin_right = 34.5
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 350, 150 )

[node name="NameLabel" type="Label" parent="NetworkSetup/PlayerSetup"]
margin_right = 350.0
margin_bottom = 60.0
rect_min_size = Vector2( 350, 60 )
text = "Name"
align = 1
valign = 1

[node name="NameEdit" type="LineEdit" parent="NetworkSetup/PlayerSetup"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 124.0
rect_min_size = Vector2( 350, 60 )
text = "Enter Your Name"
align = 1

[node name="ContinueButton" type="Button" parent="NetworkSetup/PlayerSetup"]
margin_top = 128.0
margin_right = 350.0
margin_bottom = 188.0
rect_min_size = Vector2( 350, 60 )
text = "Continue"

[node name="ErrorLabel" type="Label" parent="NetworkSetup/PlayerSetup"]
margin_top = 192.0
margin_right = 350.0
margin_bottom = 252.0
rect_min_size = Vector2( 350, 60 )
align = 1
valign = 1

[node name="Lan" type="VBoxContainer" parent="NetworkSetup"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -98.0
margin_right = 175.0
margin_bottom = 98.0

[node name="IpAddress" type="LineEdit" parent="NetworkSetup/Lan"]
margin_right = 350.0
margin_bottom = 24.0
align = 1
placeholder_text = "IP Address"
caret_blink = true
caret_blink_speed = 0.5

[node name="Host" type="Button" parent="NetworkSetup/Lan"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 60 )
text = "Host"

[node name="Join" type="Button" parent="NetworkSetup/Lan"]
margin_top = 92.0
margin_right = 350.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 60 )
text = "Join"

[node name="IpShow" type="Label" parent="NetworkSetup/Lan"]
margin_top = 156.0
margin_right = 350.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 40 )
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0

[node name="Online" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_right = 350.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "Online Server"

[node name="Local" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 64.0
margin_right = 350.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 60 )
text = "Local (Lan)"

[node name="Connections" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -44.5
margin_top = -40.0
margin_right = 44.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 350, 180 )
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="NetworkSetup/Connections"]
margin_right = 354.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Players Joined"
align = 1
valign = 1

[node name="PlayerList" type="ItemList" parent="NetworkSetup/Connections"]
margin_top = 18.0
margin_right = 354.0
margin_bottom = 318.0
rect_min_size = Vector2( 0, 300 )

[node name="HBoxContainer" type="HBoxContainer" parent="NetworkSetup/Connections"]
margin_top = 322.0
margin_right = 354.0
margin_bottom = 382.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitButton" type="Button" parent="NetworkSetup/Connections/HBoxContainer"]
margin_right = 175.0
margin_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 175, 60 )
text = "Quit"

[node name="StartButton" type="Button" parent="NetworkSetup/Connections/HBoxContainer"]
margin_left = 179.0
margin_right = 354.0
margin_bottom = 60.0
rect_min_size = Vector2( 175, 60 )
text = "Start"

[connection signal="pressed" from="NetworkSetup/PlayerSetup/ContinueButton" to="NetworkSetup" method="_on_ContinueButton_pressed"]
[connection signal="text_changed" from="NetworkSetup/Lan/IpAddress" to="NetworkSetup" method="_on_IpAddress_text_changed"]
[connection signal="pressed" from="NetworkSetup/Lan/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/Lan/Join" to="NetworkSetup" method="_on_Join_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Online" to="NetworkSetup" method="_on_Online_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Local" to="NetworkSetup" method="_on_Local_pressed"]
[connection signal="pressed" from="NetworkSetup/Connections/HBoxContainer/QuitButton" to="NetworkSetup" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="NetworkSetup/Connections/HBoxContainer/StartButton" to="NetworkSetup" method="_on_StartButton_pressed"]
